<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hughjdavey.aperio.activities.PasswordList">

    <item
        android:id="@+id/clear_search"
        android:orderInCategory="100"
        android:title="@string/menu_clear_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/sort_alpha"
        android:orderInCategory="100"
        android:title="@string/menu_sort_alpha"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_zeta"
        android:orderInCategory="100"
        android:title="@string/menu_sort_zeta"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_new"
        android:orderInCategory="100"
        android:title="@string/menu_sort_new"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_old"
        android:orderInCategory="100"
        android:title="@string/menu_sort_old"
        app:showAsAction="never" />
</menu>
